--- a/main.html
+++ b/main.html
@@ -7,9 +7,45 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+
+	<form method = "post">
+
+		<label for = "name">Name </label>
+		<input type = "text" id = "name" placeholder = "Name" required> <br>
+
+		<label for = "email">Email </label>
+		<input type = "Email" id = "email" placeholder = "Email" required><br>
+
+		<label for = "gender_m, gender_f"> Gender</label>
+		<input type = "Radio" id = "gender_m, gender_f"   required><br>
+
+		<label for = "	cars"> Car Brands</label>
+		<select  id = "cars" required placeholder = "Please choose an option"><br>
+
+			<option>BMW </option>
+			<option>AUDY </option>
+			<option> SWIFT</option>
+
+		</select><br>
+
+		<label for = "age"> Age</label>
+		<input type = "Number" id = "age" placeholder = "Age" required><br>
+
+		<label for = "dob">DOB </label>
+		<input type = "Date" id = "dob"   required><br>
+
+		<label for = "tel">Phone Number </label>
+		<input type = "Tel" id = "tel" placeholder = "xxx-xxx-xxxx" ><br>
+
+		<label for = "Password"> Password</label>
+		<input type = "Password" id = "Password" placeholder = "Password" required><br>
+
+		<label for = "	tos"> I agree to the TOS</label>
+		<input type = "Checkbox" id = "	tos"   required><br>
+
+		<button> Submit</button>
+
+	</form>
 
 </body>
 
