--- a/main.html
+++ b/main.html
@@ -16,10 +16,11 @@
 		<label for = "email">Email </label>
 		<input type = "Email" id = "email" placeholder = "Email" required><br>
 
-		<label for = "gender_m, gender_f"> Gender</label>
-		<input type = "Radio" id = "gender_m, gender_f"   required><br>
+		<label> Gender</label>
+<input type = "Radio" id = "gender_m" name="gender" value="Male" required> Male
+<input type = "Radio" id = "gender_f" name="gender" value="Female" required> Female<br>
 
-		<label for = "	cars"> Car Brands</label>
+		<label for = "cars"> Car Brands</label>
 		<select  id = "cars" required placeholder = "Please choose an option"><br>
 
 			<option>BMW </option>
@@ -37,11 +38,11 @@
 		<label for = "tel">Phone Number </label>
 		<input type = "Tel" id = "tel" placeholder = "xxx-xxx-xxxx" ><br>
 
-		<label for = "Password"> Password</label>
-		<input type = "Password" id = "Password" placeholder = "Password" required><br>
+		<label for = "password"> Password</label>
+		<input type = "Password" id = "password" placeholder = "Password" required><br>
 
-		<label for = "	tos"> I agree to the TOS</label>
-		<input type = "Checkbox" id = "	tos"   required><br>
+		<label for = "tos"> I agree to the TOS</label>
+		<input type = "Checkbox" id = "tos"   required><br>
 
 		<button> Submit</button>
 
