--- a/main.html
+++ b/main.html
@@ -44,7 +44,7 @@
 		<label for = "tos"> I agree to the TOS</label>
 		<input type = "Checkbox" id = "tos"   required><br>
 
-		<button> Submit</button>
+		<button type = "submit"> Submit</button>
 
 	</form>
 
